--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,10 +56,10 @@ mail:
   text:
     confirmation:
       subject: "Регистрация в личном кабинете турфирмы \"Arain fly\""
-      href: 'Тут должна быть ссылка на фронт, но его пока не сделали('
+      href: 'http://localhost:4200/confirm/'
     recover:
       subject: "Запрос на восстановление пароля от личного кабинета турфирмы \"Arain fly\""
-      href: 'Тут должна быть ссылка на фронт, но его пока не сделали('
+      href: 'http://localhost:4200/recover/'
 
 paths:
   ftl:
